--- a/Spanzuratoarea.HTML
+++ b/Spanzuratoarea.HTML
@@ -2,16 +2,17 @@
 <html>
     <link href = "game.css" rel = "stylesheet">
     <head>
-        <h1 style="color: red;">Spanzuratoarea!</g1>
+        <h1 style="color: red;">Spanzuratoarea!</h1>
     </head> 
     <body img src="BackSpz.png">
         <center>
             <div id = "divBorder">
              <p style = "font-size: 50px;" id = "gameBody"></p>
-             <button id = "startGame" onclick="fucntionStartGame()">Start game!</button>
-             <button id = "inputLeater">Verifica litera!</button></button>
-             <input id = "leater" type="text">
-             <p id = "wordLeater"></p>
+             <button id = "startGame" onclick = "StartGame()">Start game!</button>
+             <button id = "inputLetter"> Verifica litera! </button></button>
+             <input id = "userLetter" type="text">
+             <p id = "existingLetter" style="color: green;"></p>
+             <p id = "wordletter" style="color: green;"></p>
              <p id = "finalGame"></p>
             </div>
         </center>
