--- a/Spanzuratoarea.HTML
+++ b/Spanzuratoarea.HTML
@@ -9,11 +9,11 @@
             <div id = "divBorder">
              <p style = "font-size: 50px;" id = "gameBody"></p>
              <button id = "startGame" onclick = "StartGame()">Start game!</button>
-             <button id = "inputLetter"> Verifica litera! </button></button>
+             <button id = "inputLetter"> Verifica litera! </button>
              <input id = "userLetter" type="text">
              <p id = "existingLetter" style="color: green;"></p>
              <p id = "wordletter" style="color: green;"></p>
-             <p id = "finalGame"></p>
+             <p id = "finalGame" style="color: indianred;"></p>
             </div>
         </center>
     </body>
